data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_12.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\02\8f\80\80\80\00\01\03\65\6e\76\07"
    "\65\78\74\46\75\6e\63\00\00\03\82\80\80\80\00\01"
    "\00\0a\94\80\80\80\00\01\8e\80\80\80\00\00\41\01"
    "\04\7f\20\00\10\00\05\41\00\0b\0b"
  )
""
)